fixed row alignment

--- a/taco.css
+++ b/taco.css
@@ -1,14 +1,14 @@
 .grid_container {
    display: grid;
-   border: 3px solid blue;
+   border: 5px solid plum;
    background-color: purple;
-   grid: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr/ 1fr 1fr 1fr 1fr 1fr;
+   /*grid: repeat(7, 1fr)/ repeat(7, 1fr);*/
+   grid: 1fr 2fr 2fr 2fr 2fr 4fr 4fr 4fr/ repeat(7, 1fr);
    gap: 10px;
 }
 
 .grid_container >div {
-    background-color: yellow;
-    border: 1px solid black;
+    background-color: white;
     padding: 20px;
     font-size: 30px;
     text-align: center;
@@ -33,90 +33,107 @@ div.item4 {
     font-size: 10px;
     font-weight: bold;
     background-color: orange;
+    grid-area: 1/ 4/ 2/ 6;
 }
 div.item5 {
     font-size: 10px;
     font-weight: bold;
     background-color: orange;
+    grid-area: 1/ 6/ 2/ 8;
 }
 
 div.item6 {
     background-image: url(./taco.jpg);
     color: red;
-    grid-area: 2/ 1/ 4/ 5;
+    grid-area: 2/ 1/ 4/ 6;
 }
 div.item7 {
     
     background-color: orange;
+    grid-area: 2/ 6/ 3/ 8;
 }
 div.item8 {
     
     background-color: orange;
+    grid-area: 3/ 6/ 4/ 8;
 }
 div.item9 {
     font-size: 20px;
     font-weight: bold;
     background-color: white;
+    grid-area: 4/ 1/ 5/ 3;
 }
 
 div.item10 {
     font-size: 20px;
     font-weight: bold;
     background-color: white;
+    grid-area: 4/ 3/ 5/ 5;
 }
 div.item11 {
     font-size: 20px;
     font-weight: bold;
     background-color: white;
+    grid-area: 4/ 5/ 5/ 7;
 }
 
 div.item12 {
     font-size: 20px;
     font-weight: bold;
     background-color: white;
+    grid-area: 4/ 7/ 5/ 8;
 }
 
 div.item13 {
     background-image: url(./queso-taco.png);
-    grid-area: 5/ 1/ 7/ 6;
-}
+    grid-area: 5/ 1/ 7/ 3;
+    justify-items: center;
+    }
+
+div.item13a {
+    font-size: 20px;
+    font-weight: bold;
+    background-color: white;
+    grid-area: 5/ 3/ 7/ 8;
+    }
+    
 div.item14 {
     background-image: url(./201x201.jpg);
-    grid-area: 7/ 1/ 9/ 2;
+    grid-area: 7/ 1/ 8/ 2;
 }
 div.item15 {
     background-image: url(./202x202.jpg);
-    grid-area: 7/ 2/ 9/ 3;
+    grid-area: 7/ 2/ 8/ 3;
 }
 div.item16 {
     background-image: url(./203x203.jpg);
-    grid-area: 7/ 3/ 9/ 4;
+    grid-area: 7/ 3/ 8/ 4;
     
 }div.item17 {
     background-image: url(./204x204.jpg);
-    grid-area: 7/ 4/ 9/ 5;
+    grid-area: 7/ 4/ 8/ 5;
 }
 div.item18 {
     background-image: url(./205x205.jpg);
-    grid-area: 7/ 5/ 9/ 6;
+    grid-area: 7/ 5/ 8/ 6;
 }
 div.item19 {
     background-image: url(./206x206.jpg);
-    grid-area: 9/ 1/ 11/ 2;
+    grid-area: 7/ 6/ 8/ 7;
 }
 div.item20 {
     background-image: url(./207x207.jpg);
-    grid-area: 9/ 2/ 11/ 3;
+    grid-area: 7/ 7/ 8/ 8;
 }
 div.item21 {
     background-image: url(./207x208.jpg);
-    grid-area: 9/ 3/ 11/ 4;
+    grid-area: 8/ 1/ 9/ 2;
 }
 div.item22 {
     background-image: url(./207x209.jpg);
-    grid-area: 9/ 4/ 11/ 5;
+    grid-area: 8/ 2/ 9/ 3;
 }
 div.item23 {
     background-image: url(./207x210.jpg);
-    grid-area: 9/ 5/ 11/ 6;
+    grid-area: 8/ 3/ 9/ 4;
 }
